src/views/editors.css
@import url('/node_modules/codemirror/lib/codemirror.css');
@import url('/node_modules/codemirror/theme/neo.css');
@import url('./editors-hint.css');

.discovery-editor .CodeMirror {
    height: auto;
    overflow-y: visible !important;
    padding: 4px 8px;
    margin-bottom: 5px;
    font-family: Consolas, Monaco, monospace;
    font-size: 12px;
    border: 1px solid #aaa;
    border-radius: 3px;
    box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
}
.discovery-editor .CodeMirror-scroll {
    min-height: 6.5em;
    height: auto;
    overflow-y: visible !important;
    cursor: text;
}
.discovery-editor .CodeMirror-focused {
    border-color: #0af;
    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2) !important;
}
.discovery-editor .CodeMirror-cursor {
    border-left: 1px solid black;
    background: none;
    width: 22px;
}
.discovery-editor .CodeMirror .cm-discovery-view-name {
    background-color: #fff7e6;
    border-bottom: 1px dashed;
}

